feat: Update run task for java 19